Add default compat for all Let's Do mods Add deeper compat with BeachParty (parasol & hooded chair) Introduce heat/cold/thermal resistance ring + first aid supplies to heal limbs + configs + loots / recipe + curios compat Optimize BlockModifier calculation using cache for block temp + see sky checks Optimize datapack data population by checking loaded mods Fix height in block modifier calculation Make block temperature maximal when adjacent Fix weather modifier when raining in biome with no precipitation Slightly modify the damage source code to allow hurting in the API